# affine_mpc_py

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_requirements.txt  custom_stubgen.py  get_stubgen_path.py  pyproject.toml  reformat_stubs.py
.github/workflows/: build_wheels.yaml
cmake/: extern_ampc.cmake  extern_osqp.cmake  extern_pybind11.cmake
example/: plot.py  plot_sim.py  sim.py
src/affine_mpc/: __init__.py  _bindings.pyi  plotter.py
src/bindings/: affine_mpc_py_module.cpp  affine_mpc_py_module.hpp  py_bspline_mpc.cpp  py_condensed_mpc.cpp  py_implicit_mpc.cpp  py_mpc_base.cpp  py_mpc_logger.cpp  py_options.cpp  py_osqp_settings.cpp  py_parameterization.cpp  py_solve_status.cpp  py_sparse_mpc.cpp
test/: test_bspline_mpc.py  test_condensed_mpc.py  test_implicit_mpc.py  test_mpc_base.py  test_mpc_logger.py  test_options.py  test_osqp_settings.py  test_parameterization.py  test_solve_status.py  test_sparse_mpc.py
