[build-system]
requires = ["scikit-build-core", "pybind11[global]", "numpy", "pybind11-stubgen", "black"]
build-backend = "scikit_build_core.build"

[project]
name = "affine_mpc"
version = "1.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "abracatabra[qt-pyside6]"
]
authors = [
    {name="Mathew Haskell", email="mhaskell9@gmail.com"}
]
description="Python bindings for the affine_mpc library"
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
keywords = ["affine mpc", "mpc", "model predictive control"]

# Install these with `pip install .[dev]`
[project.optional-dependencies]
dev = [
    "pytest",
]
build = [
    "pybind11[global]",
]
stubs = [
    "numpy",
    "pybind11-stubgen",
    "black",
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
BUILD_SHARED_LIBS = "ON"
