[build-system]
requires = ["scikit-build-core", "pybind11", "numpy", "pybind11-stubgen", "black"]
build-backend = "scikit_build_core.build"

[project]
name = "affine_mpc"
# version = "1.0.0"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "abracatabra[qt-pyside6]"
]
authors = [
    {name="Mathew Haskell", email="mhaskell9@gmail.com"}
]
description="Python bindings for the affine_mpc library"
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
keywords = ["affine mpc", "mpc", "model predictive control"]

# Install these with `pip install .[dev]`
[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.scikit-build]
cmake.build-type = "Release"
install.components = ["python_bindings"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.8"
sdist.include = ["src/affine_mpc/_version.py"]

# [tool.scikit-build.cmake.define]
# BUILD_SHARED_LIBS = "OFF"

[tool.setuptools_scm]
# Uses info from git tags to generate version numbers.
# Current commit must be tagged with no working changes to get a clean version;
# otherwise, a local version identifier is added.
write_to = "src/affine_mpc/_version.py" 
